fix(data): 添加任务三margin负值法（note: right块margin-left值不能太小否则会被压到下面）

--- a/ife-wei-03/ife-wei-03.html
+++ b/ife-wei-03/ife-wei-03.html
@@ -57,24 +57,27 @@
     </div>
 
     <div class="container3">
+      <div class="main">
+        <div class="card-middle3">
+          <h3 id="3">margin负值法</h3>
+          <img src="container.jpg">
+          <p>首先，中间的主体要使用双层标签。外层div宽度100%显示，并且浮动（本例左浮动，下面所述依次为基础），内层div为真正的主体内容，含有左右210像素的margin值。左栏与右栏都是采用margin负值定位的，左栏左浮动，margin-left为-100%，由于前面的div宽度100%与浏览器，所以这里的-100%margin值正好使左栏div定位到了页面的左侧；右侧栏也是左浮动，其margin-left也是负值，大小为其本身的宽度即200像素。</p>
+          <p>注意几个div的顺序，无论是左浮动还是右浮动，先是主体部分div，这是肯定的，至于左右两栏谁先谁后，都无所谓。</p>
+          <p>此方法的优点：三栏相互关联，可谓真正意义上的自适应，有一定的抗性——布局不易受内部影响。</p>
+          <p>缺点在于：相对比较难理解些，上手不容易，代码相对复杂。出现百分比宽度，过多的负值定位，如果出现布局的bug，排查不易。</p>
+        </div>
+      </div>
+
       <div class="card-left3">
         <img src="logo.jpg">
         <p>团队头像</p>
       </div>
+
       <div class="card-right3">
         <img src="logo.jpg">
         <img src="logo.jpg">
         <img src="logo.jpg">
         <img src="logo.jpg">
-      </div>
-
-      <div class="card-middle3">
-        <h3 id="2">绝对定位法</h3>
-        <img src="container.jpg">
-        <p>三种方法里最直观，最容易理解的：左右两栏采用绝对定位，分别固定于页面的左右两侧，中间的主体栏用左右margin值撑开距离。于是实现了三栏自适应布局。</p>
-        <p>这里的左中右三个div的顺序是可以任意调整的，这与剩下的两中方法就不一样了，需要注意一下。</p>
-        <p>此方法的优点是，理解容易，上手简单，受内部元素影响而破坏布局的概率低，就是比较经得起折腾。</p>
-        <p>缺点在于：如果中间栏含有最小宽度限制，或是含有宽度的内部元素，当浏览器宽度小到一定程度，会发生层重叠的情况。然而，一般情况下，除非用户显示器分辨率宽度>=1600像素，否则用户不会把浏览器缩小到1000像素以下的，所以该缺陷危害指数3。</p>
       </div>
     </div>
 
