fix(data): 修改sidebar用float, cardset用margin定位

--- a/ife-wei-05/ife-wei-05.html
+++ b/ife-wei-05/ife-wei-05.html
@@ -17,93 +17,7 @@
     </div>
 
     <div class="container">
-      <div class="card">
-        <h1 id="article1">文章一级标题</h1>
-        <h2>文章二级标题</h2>
-        <h3>文章作者 文章发表时间</h3>
-        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-        <img src="keyboard.jpg">
-        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-      </div>
-
-      <div class="card">
-        <h1 id="article2">另一篇文章一级标题</h1>
-        <h2>文章二级标题</h2>
-        <h3>文章作者 文章发表时间</h3>
-        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-        <img src="keyboard.jpg">
-        <ul>
-          <li>列表项目一</li>
-          <li>列表项目二</li>
-          <li>列表项目三</li>
-        </ul>
-      </div>
-
-      <div class="card">
-        <h1 id="article3">图片</h1>
-        <ul id="picset">
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-          <li><p>好看的图片</p><img src="keyboard.jpg"></li>
-        </ul>
-      </div>
-
-      <div class="card">
-        <h1 id="article4">最后一篇文章一级标题</h1>
-        <h2>文章二级标题</h2>
-        <h3>文章作者 文章发表时间</h3>
-        <ol>
-          <li>排名1</li>
-          <li>排名2</li>
-          <li>排名3</li>
-        </ol>
-        <p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
-        <table>
-          <thead>
-            <tr>
-              <th>表头</th>
-              <th>表头</th>
-              <th>表头</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>表内容单元格</td>
-              <td>表内容单元格</td>
-              <td>操作</td>
-            </tr>
-            <tr>
-              <td>表内容单元格</td>
-              <td>表内容单元格</td>
-              <td>操作</td>
-            </tr>
-            <tr>
-              <td>表内容单元格</td>
-              <td>表内容单元格</td>
-              <td>操作</td>
-            </tr>
-            <tr>
-              <td>表内容单元格</td>
-              <td>表内容单元格</td>
-              <td>操作</td>
-            </tr>
-            <tr id="lastrow">
-              <td>总计</td>
-              <td colspan="2">1000</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-    <div class="side">
+      <div class="side">
         <h1 class="side-bar">这里是侧栏的标题</h1>
         <h2 class="side-bar-title">个人信息注册</h2>
         <form id="info" action="ife-wei-05.html" method="get">
@@ -146,6 +60,98 @@
           <input type="submit" value="确认提交" id="submit1"></p>
         </form>
       </div>
+      <div class="cardset">
+        <div class="card">
+          <h1 id="article1">文章一级标题</h1>
+          <h2>文章二级标题</h2>
+          <h3>文章作者 文章发表时间</h3>
+          <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+          <img src="keyboard.jpg">
+          <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+        </div>
+
+        <div class="card">
+          <h1 id="article2">另一篇文章一级标题</h1>
+          <h2>文章二级标题</h2>
+          <h3>文章作者 文章发表时间</h3>
+          <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+          <img src="keyboard.jpg">
+          <ul>
+            <li>列表项目一</li>
+            <li>列表项目二</li>
+            <li>列表项目三</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h1 id="article3">图片</h1>
+          <ul id="picset">
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+            <li><p>好看的图片</p><img src="keyboard.jpg"></li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h1 id="article4">最后一篇文章一级标题</h1>
+          <h2>文章二级标题</h2>
+          <h3>文章作者 文章发表时间</h3>
+          <ol>
+            <li>排名1</li>
+            <li>排名2</li>
+            <li>排名3</li>
+          </ol>
+          <div>
+            <p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>表头</th>
+                  <th>表头</th>
+                  <th>表头</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>表内容单元格</td>
+                  <td>表内容单元格</td>
+                  <td>操作</td>
+                </tr>
+                <tr>
+                  <td>表内容单元格</td>
+                  <td>表内容单元格</td>
+                  <td>操作</td>
+                </tr>
+                <tr>
+                  <td>表内容单元格</td>
+                  <td>表内容单元格</td>
+                  <td>操作</td>
+                </tr>
+                <tr>
+                  <td>表内容单元格</td>
+                  <td>表内容单元格</td>
+                  <td>操作</td>
+                </tr>
+                <tr>
+                  <td>总计</td>
+                  <td colspan="2">1000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
     <div class="footer">
       <p>版权所有©</p>
     </div>
