fix(data): 添加任务六页面中container-2,3

--- a/ife-wei-06/ife-wei-06.html
+++ b/ife-wei-06/ife-wei-06.html
@@ -35,9 +35,36 @@
           </div>
         </div>
         <div class="container-2">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+          <div class="card-1">
+            <p class="title-what">What</p>
+            <p>前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端</p>
+          </div>
+          <div class="card-2">
+            <p class="title-when">When</p>
+            <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+          </div>
+          <div class="card-3">
+            <p class="title-how">How</p>
+            <p class="text">前端前端前端前端前</p><p class="text">端前端前端前端前端前</p><p class="text">前端前端前端前端前</p>
+            <ul class="ullist">
+              <li>What-------- <span class="number">40%</span></li>
+              <li>What-------- <span class="number">30%</span></li>
+              <li>What-------- <span class="number">30%</span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="container-3">
+          <div class="front-technology">
+            <p><span class="THEword">the</span> technologe of front</p>
+            <p class="chinese">前端技术领域</p>
+          </div>
+          <div class="wordtext">
+            <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+            <img src="laptop-3.jpg">
+          </div>
+        </div>
+        <div class="container-4">
+
         </div>
       </div>
     </div>
