fix(data): 添加任务六页面中containter-3

--- a/ife-wei-06/ife-wei-06.html
+++ b/ife-wei-06/ife-wei-06.html
@@ -8,12 +8,14 @@
   <body>
     <div class="container-big">
       <div class="poster">
+
         <div class="top">
           <div class="colorblock">
             <p>ife.baidu.com</p>
           </div>
           <p>2016.03</p>
         </div>
+
         <div class="container-1">
           <div class="word-right">
             <div class="technology">
@@ -34,6 +36,7 @@
             <div class="red"></div>
           </div>
         </div>
+
         <div class="container-2">
           <div class="card-1">
             <p class="title-what">What</p>
@@ -53,19 +56,39 @@
             </ul>
           </div>
         </div>
-        <div class="container-3">
-          <div class="front-technology">
-            <p><span class="THEword">the</span> technologe of front</p>
-            <p class="chinese">前端技术领域</p>
-          </div>
-          <div class="wordtext">
-            <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
-            <img src="laptop-3.jpg">
-          </div>
-        </div>
-        <div class="container-4">
 
-        </div>
+        <div class="container-bottom"> 
+          <div class="container-3">
+            <div class="front-technology">
+              <h3><span class="THEword">the</span> technologe<br /> of front</h3>
+              <p class="chinese">前端技术领域</p>
+            </div>
+            <div class="wordtext">
+              <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+              <img src="laptop-3.jpg" class="laptop-3">
+              <p>前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+              <p class="indent-two">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+              <p class="indent-two">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+            </div>
+          </div>
+          <div class="container-4">
+            <div class="laptop-2">
+              <img src="laptop-2.jpg">
+              <div class="cover">
+                <p><span class="whitetext">前端技术</span>前端技术前端技术</p>  
+              </div>
+            </div>
+            <div class="lastblock">
+              <ul class="ultext">
+                <li>前端前端前端前端前端前端前..............前端</li>
+                <li>前端前端前端前端......................前端前</li>
+                <li>前端前端前端前端前端前端前端............前端</li>
+              </ul>
+              <div class="redblock"></div>
+              <div class="quota"></div>
+            </div>
+          </div>
+        </div>   
       </div>
     </div>
   </body>
