fix(data): 完成任务六ife-wei-06.html与css样式-final

--- a/ife-wei-06/ife-wei-06.html
+++ b/ife-wei-06/ife-wei-06.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf=8">
+    <meta charset="utf-8">
     <title>任务六：通过HTML及CSS模拟报纸排版</title>
     <link rel="stylesheet" href="ife-wei-06.css">
   </head>
@@ -57,10 +57,10 @@
           </div>
         </div>
 
-        <div class="container-bottom"> 
+        <div class="container-bottom">
           <div class="container-3">
             <div class="front-technology">
-              <h3><span class="THEword">the</span> technologe<br /> of front</h3>
+              <div><span class="THEword">the</span> technologe<br /> of front</div>
               <p class="chinese">前端技术领域</p>
             </div>
             <div class="wordtext">
@@ -75,20 +75,29 @@
             <div class="laptop-2">
               <img src="laptop-2.jpg">
               <div class="cover">
-                <p><span class="whitetext">前端技术</span>前端技术前端技术</p>  
+                <p><span class="whitetext">前端技术</span>前端技术前端技术</p>
               </div>
             </div>
             <div class="lastblock">
               <ul class="ultext">
-                <li>前端前端前端前端前端前端前..............前端</li>
-                <li>前端前端前端前端......................前端前</li>
-                <li>前端前端前端前端前端前端前端............前端</li>
+                <span class="triangle-up"></span><li>前端前端前端前端前端前端前..............<span class="i-small">前端</span></li>
+                <span class="triangle-up"></span><li>前端前端前端前端......................<span class="i-small">前端前</span></li>
+                <span class="triangle-up"></span><li>前端前端前端前端前端前端前端............<span class="i-small">前端</span></li>
               </ul>
-              <div class="redblock"></div>
-              <div class="quota"></div>
+              <div class="redblock">
+                <p>0</p>
+                <div class="white-line"></div>
+                <div class="lasttext-left">
+                  <p class="order">ONE TWO<br />THREE FOUR FIVE</p>
+                  <p class="hello">hello world hello world<br />hello world</p>
+                </div>
+              </div>
+              <div class="quotation">
+                <p>world hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world</p>
+              </div>
             </div>
           </div>
-        </div>   
+        </div>
       </div>
     </div>
   </body>
